--- a/src/app/communications/presentation/pages/inbox/submission-dialog/submission-dialog.component.html
+++ b/src/app/communications/presentation/pages/inbox/submission-dialog/submission-dialog.component.html
@@ -17,8 +17,7 @@
       <div class="col-span-3">
         <mat-form-field>
           <mat-label>Instruccion / Proveido</mat-label>
-          <textarea formControlName="reference" matInput required>
-          </textarea>
+          <textarea formControlName="reference" matInput required> </textarea>
           <mat-error *ngIf="formSubmission.controls['reference'].invalid">
             Ingrese el motivo
           </mat-error>
@@ -120,7 +119,7 @@
       </button>
     </div>
   </div>
-  <div class="overflow-y-scroll max-h-64">
+  <!-- <div class="overflow-y-scroll max-h-64">
     <mat-list role="list">
       @for (item of recipients(); track $index) {
       <mat-list-item role="listitem">
@@ -138,7 +137,61 @@
       <mat-list-item> * Sin destinatarios </mat-list-item>
       }
     </mat-list>
-  </div>
+  </div> -->
+<!-- 
+  <div class="col-12">
+    <mat-form-field>
+      <mat-label>Destinatarios</mat-label>
+      <mat-chip-grid #chipGrid aria-label="User selection">
+        @for (fruit of sdsd(); track fruit.id_account) {
+        <mat-chip-row (removed)="remove(fruit.id_account)">
+          <img
+            matChipAvatar
+            src="../../../../../../assets/img/account.png"
+            alt="Photo of officer"
+          />
+          {{ fruit.officer.fullname | titlecase }}
+
+          <button
+            matChipRemove
+            [attr.aria-label]="'remove ' + fruit.id_account"
+          >
+            <mat-icon>cancel</mat-icon>
+          </button>
+        </mat-chip-row>
+        }
+      </mat-chip-grid>
+      <input
+        placeholder="Agregar destinatario..."
+        #receiverInput
+        [formControl]="filterReceiverCtrl"
+        [matChipInputFor]="chipGrid"
+        [matAutocomplete]="auto"
+      />
+      <mat-autocomplete #auto="matAutocomplete">
+        @for (user of filteredReceivers$ | async; track user.id_account) {
+        <mat-option [value]="user">
+          <div class="flex">
+            <img
+              class="h-6 mr-2"
+              src="../../../../../../assets/img/account.png"
+            />
+            <div>
+              <span>{{ user.officer.fullname | titlecase }} </span>
+              <small>({{ user.officer.jobtitle | uppercase }})</small>
+              <span
+                class="c-pill"
+                [ngClass]="user.online ? 'c-pill--success' : 'c-pill--danger'"
+                >{{ user.online ? "Conectado" : "Sin conexion" }}</span
+              >
+            </div>
+          </div>
+        </mat-option>
+        }
+      </mat-autocomplete>
+    </mat-form-field>
+  </div> -->
+
   <!-- <div class="flex justify-end mt-2">
     <button mat-button matStepperPrevious>
       <mat-icon>arrow_back</mat-icon>
