--- a/src/app/communications/presentation/pages/outbox/outbox.component.html
+++ b/src/app/communications/presentation/pages/outbox/outbox.component.html
@@ -13,10 +13,14 @@
   }
 </mat-toolbar>
 
-<div class="px-2 sm:px-4">
-  <div class="flex justify-end py-2">
-    <div class="w-full sm:w-1/4 h-11">
-      <search-input (onSearch)="search($event)" placeholder="Alterno / Destinatario"/>
+<div class="p-2 sm:p-4">
+  <div class="flex justify-end mb-2">
+    <div class="w-full sm:w-1/4 h-[54px]">
+      <search-input
+        [initValue]="term()"
+        (onSearch)="search($event)"
+        placeholder="Codigo / Destinatario"
+      />
     </div>
   </div>
 
@@ -41,15 +45,32 @@
 
       <ng-container matColumnDef="type">
         <th mat-header-cell *matHeaderCellDef>Documento</th>
-        <td mat-cell *matCellDef="let item">
-          {{ item.groupLabel }} / {{ item.documentLabel }}
+        <td mat-cell *matCellDef="let item" class="sm:w-32">
+          <div class="flex items-center gap-x-2">
+            @if(item.isOriginal) {
+            <mat-icon style="color: var(--mat-sys-primary)"> task </mat-icon>
+            } @else {
+            <mat-icon style="color: var(--mat-sys-outline)">
+              description
+            </mat-icon>
+            }
+            <div>
+              {{ item.groupLabel }}
+            </div>
+          </div>
         </td>
       </ng-container>
 
       <ng-container matColumnDef="code">
-        <th mat-header-cell *matHeaderCellDef>Alterno</th>
-        <td mat-cell *matCellDef="let item">
+        <th mat-header-cell *matHeaderCellDef>Codigo</th>
+        <td mat-cell *matCellDef="let item" class="sm:w-48">
           {{ item.procedure.code }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="reference">
+        <th mat-header-cell *matHeaderCellDef>Referencia</th>
+        <td mat-cell *matCellDef="let item" class="sm:max-w-72">
+          <p class="truncate">{{ item.procedure.reference }}</p>
         </td>
       </ng-container>
 
@@ -67,10 +88,9 @@
         </td>
       </ng-container>
 
-     
       <ng-container matColumnDef="time">
         <th mat-header-cell *matHeaderCellDef>Duracion</th>
-        <td mat-cell *matCellDef="let item">
+        <td mat-cell *matCellDef="let item" class="sm:w-52">
           @switch (item.status){ @case ('rejected') {
           <badge severity="danger" message="Rechazado" />
           } @case ('pending') {
@@ -78,8 +98,6 @@
             severity="warning"
             [message]="item.remainingTime | humanizeDuration"
           />
-          } @case ('approved') {
-          <!-- <badge severity="warning" [message]="item.remainingTime.tosString()" /> -->
           } @case ('auto-rejected') {
           <badge severity="purple" message="Expirado" />
           } @default {
@@ -204,16 +222,17 @@
         class="detail-row"
       ></tr>
       <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell p-3" colspan="8">Sin resultados</td>
+        <td class="mat-cell p-3" colspan="8">SIN RESULTADOS.</td>
       </tr>
     </table>
+    @if(datasize()>limit()){
     <mat-paginator
-      aria-label="Select page of users search results"
       showFirstLastButtons
       [length]="datasize()"
       [pageIndex]="index()"
       [pageSize]="10"
       (page)="onPageChange($event)"
     />
+    }
   </div>
 </div>
